# NtWin32

./: CMakeLists.txt  README.md
docs/: README.md
include/NtWin32/: Windows.h  minwindef.h  ntdll.h
source/: errhandlingapi.cpp
test/: test.cpp
